fix pdf in dark mode

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -43,6 +43,8 @@
   margin: 0 auto;
   left: 20px;
   font-weight: normal;
+  position: relative;
+  left: 20px;
 }
 .logo-mobile:before{
   content: "<";
